2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Set error in the -1 case from
	manager_connect, otherwise will XSL transform the return again.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (set_http_status_from_entity): If entity is NULL set
	http_status_code.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (SET_HTTP_STATUS_FROM_ENTITY): Remove.  Now a function.
	(set_http_status_from_entity): New function.  Was macro.  Also add
	entity check.  Update all callers.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (host-link): Skip the link if an asset ID
	is not available.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (host-link): Link to asset Host Details
	instead of Assets.
	(result [result-row], result, report [hosts], report [closed_cves])
	(report [ssl_certs], report [errors]): Update host-link call.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (list-window): Move bulk new icon to the
	right of the delete icon, to match the row icons.

2015-09-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (tag_resource_types, html-configs-table): Use
	Scan Config instead of Scan Configuration, like everywhere else.

	* src/html/classic/help.xsl (new_config.html, glossary.html)
	(my_settings.html, config_details.html, config_editor.html)
	(config_editor_nvt_families.html, config_editor_nvt.html)
	(config_family_details.html, config_nvt_details.html): Refer to configs
	as "Scan Configs" everywhere, instead of mixing in the term "Scan
	Configuration", because "Scan Config" is what is used in the interface.

2015-09-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Simplify/consolidate online help by introducing some generic
	pages. As an example, the resource type "Target" is converted